Bug 803873 - startup crash in DocAccessible::Attributes, r=tbsaunde